--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ opt-level = 3
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+bench = []
+
 [dependencies]
 encoding = "0.2.33"
 byteorder = "1.5.0"
